# harmonized-hyper-connections

./: .gitignore  AGENTS.md  MANIFEST.md  README.md  TASKS.md  harmonizer_applied_gain.py  make_figures.py  prompt.md  pyproject.toml  results_aggregate.csv  results_summary.csv  results_summary.md  rift_mhc_sandbox.py  run_remaining.py
evidence/env/: base-commit.txt  gfs-df.txt  memory.txt  nvidia-smi.txt  nvidia-topology.txt  uname.txt  uv-outdated.txt  uv-python-list.txt  uv-python-version.txt  uv-version.txt
experiments/: tune_harmonizer.py
runs/20260107_064812_tune/: all_stages.json  summary.csv
runs/20260107_113333_harm15k/: config.json  metrics.csv  summary.json
runs/aborted_pub15k_res_scale_seed0_scheduler_restart_20260507/: ABORTED.md  command.txt  config.json  metrics.csv
runs/pub15k_harm_seed0/: command.txt  config.json  manifest.json  metrics.csv  summary.json
runs/pub15k_harm_seed1/: command.txt  config.json  manifest.json  metrics.csv  summary.json
runs/pub15k_harm_seed2/: command.txt  config.json  manifest.json  metrics.csv  summary.json
runs/pub15k_hc_seed0/: command.txt  config.json  manifest.json  metrics.csv  summary.json
runs/pub15k_hc_seed1/: command.txt  config.json  manifest.json  metrics.csv  summary.json
runs/pub15k_hc_seed2/: command.txt  config.json  manifest.json  metrics.csv  summary.json
scripts/: run_pub15k_matrix.sh  summarize_results.py  validate_artifacts.py
tests/: test_composite_gain.py  test_harmonizer_scaling.py  test_seed_determinism.py  test_sinkhorn.py  test_summary_schema.py
(+220 files in other folders)
