[project]
name = "harmonized-hyper-connections"
version = "0.1.0"
description = "Reproducible evidence package for Harmonized Hyper-Connections experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "torch>=2.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
